Fix warps/course plot/traders/forces overlapping with walls on the left/right respectively.

--- a/htdocs/css/shared.css
+++ b/htdocs/css/shared.css
@@ -333,6 +333,7 @@ div.lm_sector div.lmup {
 div.lm_sector div.lmp {
 	position: absolute;
 	top: 10px;
+	left: 10px;
 	height: 18px;
 	z-index: 2;
 }
@@ -340,7 +341,7 @@ div.lm_sector div.lmp {
 div.lm_sector div.lmtf {
 	position: absolute;
 	top: 10px;
-	right: 0px;
+	right: 10px;
 	height: 18px;
 	text-align:right;
 	z-index: 2;
